# yourpasskeyisweak

./: README.md
bitwarden/: 502.d307950aaee8dde30675.js  README.md  credentials.txt  login.html  login.sh  package-lock.json  package.json  script.js  server.js  styles.670f2459a56b6675d228.css  styles.670f2459a56b6675d228.css.map  styles.css
bitwarden/app/: main.d34a44409dff96cebcb4.js  polyfills.47e4e53e65eb5f823eee.js  vendor.abf1195069fb9fdb4e6c.js
bitwarden/testing/: login.html
chrome/: README.md  get_started.sh  passkeyphisher.py  pyproject.toml
chrome/passkeyphishing/: chrome.py  colors.py
chrome/templates/: index.html  password.html  password_manager_pin.html  pwned.html
passkeyphishing/: passkeyphisher.py  pyproject.toml
passkeyphishing/passkeyphishing/: chrome.py
passkeyphishing/templates/: index.html  password.html  password_manager_pin.html  pwned.html  sms.html  verify.html
